added headers (rat did) don't output descriptors. don't enable conversion of legacy openejb2 descriptors (saves on permgen)