@@ -63,6 +63,8 @@ public class DeploymentImpl implements TSDeploymentInterface2 {
 
     static {
 //        System.setProperty("java.opts", "-Xmx128m -XX:MaxPermSize=128m");
+//        System.setProperty("java.opts", "-XX:MaxPermSize=32m");
+//        System.setProperty("openejb.server.profile", "true");
         final RemoteServer remoteServer = new RemoteServer(120, true);
         remoteServer.start();
 
